--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/15_tomatochutney/15_30.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/15_tomatochutney/15_30.yaml
@@ -4,18 +4,34 @@ recording_id: '15_30'
 step_annotations:
 - description: Heat-Heat 3 tbsp oil in a pan over medium heat
   end_time: 45.677
+  errors:
+  - description: Spill and as a consequence added more oil than required
+    tag: Measurement Error
+  - description: Spill oil while adding to the pan
+    tag: Technique Error
+  - description: Step performed before making the puree and mincing the garlic
+    tag: Order Error
   start_time: 5.434
   step_id: 154
 - description: Take-Take 1 tomato
   end_time: 60.094
+  errors:
+  - description: Step performed after heating the pan
+    tag: Order Error
   start_time: 48.516
   step_id: 149
 - description: Add-Add 1/4 tsp mustard to the pan
   end_time: 109.45
+  errors:
+  - description: Step performed before making the puree and mincing the garlic
+    tag: Order Error
   start_time: 70.4
   step_id: 139
 - description: Chop-Chop tomato roughly (anysize chunks are fine)
   end_time: 135.293
+  errors:
+  - description: Step performed after heating the pan
+    tag: Order Error
   start_time: 111.12100000000001
   step_id: 155
 - description: Peel-Peel 4 large garlic cloves
@@ -23,11 +39,16 @@ step_annotations:
   errors:
   - description: only 2 garlic are peeled and minced instead of 4
     tag: Measurement Error
+  - description: Step performed after heating the pan
+    tag: Order Error
   modified_description: Peel-Peel 2 instead of 4 large garlic cloves
   start_time: 139.693
   step_id: 145
 - description: puree-puree tomatoes without any water in a blender/mixer
   end_time: 271.037
+  errors:
+  - description: Step performed after heating the pan
+    tag: Order Error
   start_time: 219.566
   step_id: 150
 - description: mince-mince the garlic
@@ -35,6 +56,8 @@ step_annotations:
   errors:
   - description: mince only 2 garlic instead of 4
     tag: Measurement Error
+  - description: Step performed after heating the pan
+    tag: Order Error
   modified_description: mince-mince only 2 garlic instead of 4
   start_time: 273.604
   step_id: 140
@@ -45,8 +68,8 @@ step_annotations:
 - description: add-When mustard and cumin seeds begin to sizzle, add minced garlic
   end_time: 395.42
   errors:
-  - description: burn mustard
-    tag: Technique Error
+  - description: burn mustard due to cooking for too long
+    tag: Temperature Error
   - description: spill garlic while adding
     tag: Technique Error
   modified_description: add-When mustard and cumin seeds begin to sizzle and burn
@@ -55,6 +78,9 @@ step_annotations:
   step_id: 152
 - description: Lower-Lower the heat
   end_time: 405.397
+  errors:
+  - description: High heat instead of low heat
+    tag: Temperature Error
   start_time: 401.897
   step_id: 151
 - description: Saute-Saute the garlic for 2-3 minutes
@@ -101,5 +127,9 @@ step_annotations:
   step_id: 156
 - description: Add-Add 2 tbsp red chili powder to the pan
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 147
