--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/15_tomatochutney/15_37.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/15_tomatochutney/15_37.yaml
@@ -12,6 +12,8 @@ step_annotations:
   errors:
   - description: heart only 2 tbsp oil instead of 3 tbsp
     tag: Measurement Error
+  - description: Step performed before making the puree and mincing the garlic
+    tag: Order Error
   modified_description: Heat-Heat 2 tbsp oil in a pan over medium heat
   start_time: 126.986
   step_id: 154
@@ -20,6 +22,8 @@ step_annotations:
   errors:
   - description: spill some out while adding
     tag: Technique Error
+  - description: Step performed before making the puree and mincing the garlic
+    tag: Order Error
   modified_description: Add-1/2 tsp cumin seeds to the pan and spill some out while
     adding
   start_time: 201.035
@@ -29,15 +33,23 @@ step_annotations:
   errors:
   - description: crush the garlic instead of mincing
     tag: Technique Error
+  - description: Step performed after heating the pan
+    tag: Order Error
   modified_description: Crush the garlic
   start_time: 263.33
   step_id: 140
 - description: Add-Add 1/4 tsp mustard to the pan
   end_time: 362.487
+  errors:
+  - description: Step performed before making the puree
+    tag: Order Error
   start_time: 307.331
   step_id: 139
 - description: add-When mustard and cumin seeds begin to sizzle, add minced garlic
   end_time: 377.38
+  errors:
+  - description: Step performed before making the puree
+    tag: Order Error
   start_time: 356.149
   step_id: 152
 - description: Lower-Lower the heat
@@ -45,6 +57,8 @@ step_annotations:
   errors:
   - description: increase the heat instead of reducing
     tag: Temperature Error
+  - description: Step performed before making the puree
+    tag: Order Error
   modified_description: Higher-increase the heat
   start_time: 380.072
   step_id: 151
@@ -53,21 +67,18 @@ step_annotations:
   errors:
   - description: Use a soiled tomato and don't wash it
     tag: Preparation Error
+  - description: Step performed after adding minced garlic
+    tag: Order Error
   modified_description: Take-Take 1 soiled tomato
   start_time: 392.15
   step_id: 149
 - description: Saute-Saute the garlic for 2-3 minutes
-  end_time: 470.72
+  end_time: -1.0
   errors:
-  - description: Don't saute, just leave it in pan for 1 min
-    tag: Timing Error
-  - description: Don't saute, just leave it in pan for 1 min
-    tag: Technique Error
-  - description: Don't saute garlic, just leave it in pan for 1 min
-    tag: Temperature Error
-  modified_description: Leave-Don't saute, just leave it in pan for 1 min, so garlic
-    may be burnt on one side
-  start_time: 408.104
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
+  start_time: -1.0
   step_id: 148
 - description: mix-mix well contents of the pan
   end_time: -1.0
@@ -79,6 +90,9 @@ step_annotations:
   step_id: 157
 - description: puree-puree tomatoes without any water in a blender/mixer
   end_time: 466.091
+  errors:
+  - description: Step performed after adding minced garlic
+    tag: Order Error
   start_time: 414.521
   step_id: 150
 - description: Add-1/2 tsp salt to the pan
